fix: Switch to java21 to fix missing icon problem